src/test/ui/regions/regions-infer-contravariance-due-to-decl.nll.stderr
error: lifetime may not live long enough
  --> $DIR/regions-infer-contravariance-due-to-decl.rs:25:12
   |
LL | fn use_<'short,'long>(c: Contravariant<'short>,
   |         ------ ----- lifetime `'long` defined here
   |         |
   |         lifetime `'short` defined here
...
LL |     let _: Contravariant<'long> = c;
   |            ^^^^^^^^^^^^^^^^^^^^ type annotation requires that `'short` must outlive `'long`

error: aborting due to previous error

